--- a/cimed-backend/doctor-service/src/main/resources/application.yml
+++ b/cimed-backend/doctor-service/src/main/resources/application.yml
@@ -21,8 +21,8 @@ spring:
 
 eureka:
   instance:
-    hostname: discovery-service
+    hostname: localhost
     prefer-ip-address: true
   client:
     service-url:
-      defaultZone: ${EUREKA_URL:http://discovery-service:8761/eureka/}
+      defaultZone: ${EUREKA_URL:http://localhost:8761/eureka/}
