--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -69,7 +69,7 @@ services:
       - spring.datasource.url=jdbc:mysql://database-mysql:3306/cimed
       - server.port=8004
       - app.feign.client.cimed-doctor.url=http://doctor-service:8002
-      - app.feign.client.cimed-user.url=http://patient-service:8001
+      - app.feign.client.cimed-user.url=http://users-service:8001
       - KEYCLOAK_ISSUER_URI=http://${KEYCLOAK_HOSTNAME}:8040/realms/CimedRealm
       - EUREKA_URL=http://discovery-service:8761/eureka/
     develop:
